--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="cabecalho">
         <div class="container">
             <input class="container__botao" type="checkbox" id="menu">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem-hamburguer"></span>
             </label>
             <ul class="lista-menu">
@@ -46,7 +46,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
 
@@ -73,10 +73,19 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img class="container__imagem container__imagem-transparente" src="assets/Favoritos.svg"
-                    alt="Meus favoritos"></a>
-            <a href="#"><img class="container__imagem" src="assets/Compras.svg" alt="Carrinho de compras"></a>
-            <a href="#"><img class="container__imagem" src="assets/Usuario.svg" alt="Meu perfil"></a>
+            <a href="#" class="container__link">
+                <img class="container__imagem container__imagem-transparente" src="assets/Favoritos.svg"
+                    alt="Meus favoritos">
+            </a>
+            <a href="#" class="container__link">
+                <img class="container__imagem container__imagem--header" src="assets/Compras.svg"
+                    alt="Carrinho de compras">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img class="container__imagem container__imagem--header" src="assets/Usuario.svg" alt="Meu perfil">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
 
@@ -90,54 +99,57 @@
         <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
 
         <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/carousel/ApacheKafka.svg"
-                        alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Liderança.svg"
-                        alt="Livro sobre liderança em design da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Javascript.svg"
-                        alt="Livro sobre Javascript assertivo da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Guia Front-end.svg"
-                        alt="Livro Guia Front-End da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Portugol.svg"
-                        alt="Livro sobre Portugol da Alura Books">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/carousel/ApacheKafka.svg"
+                            alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Liderança.svg"
+                            alt="Livro sobre liderança em design da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Javascript.svg"
+                            alt="Livro sobre Javascript assertivo da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Guia Front-end.svg"
+                            alt="Livro Guia Front-End da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Portugol.svg"
+                            alt="Livro sobre Portugol da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/carousel/Acessibilidade.svg"
+                            alt="Livro sobre acessibilidade da Alura Books"></div>
                 </div>
-                <div class="swiper-slide"><img src="assets/carousel/Acessibilidade.svg"
-                        alt="Livro sobre acessibilidade da Alura Books"></div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <!-- 1a linha -->
-            <div class="card__descricao">
-                <!-- 1a coluna -->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <div class="card">
+                <!-- 1a linha -->
+                <div class="card__descricao">
+                    <!-- 1a coluna -->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <!-- 2a coluna -->
+                    <img class="descricao__imagem" src="assets/Angular.svg" alt="Angular">
                 </div>
-                <!-- 2a coluna -->
-                <img class="descricao__imagem" src="assets/Angular.svg" alt="Angular">
-            </div>
 
-            <!-- 2a linha -->
-            <div class="card__botoes">
-                <!-- 1a coluna -->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <!-- 2a coluna -->
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+                <!-- 2a linha -->
+                <div class="card__botoes">
+                    <!-- 1a coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <!-- 2a coluna -->
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -146,55 +158,58 @@
         <h2 class="carrossel__titulo">Mais vendidos</h2>
 
         <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/carousel/Javascript.svg"
-                        alt="Livro sobre Javascript assertivo da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Portugol.svg"
-                        alt="Livro sobre Portugol da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Guia Front-end.svg"
-                        alt="Livro Guia Front-End da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Liderança.svg"
-                        alt="Livro sobre liderança em design da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/Acessibilidade.svg"
-                        alt="Livro sobre acessibilidade da Alura Books"></div>
-                <div class="swiper-slide"><img src="assets/carousel/ApacheKafka.svg"
-                        alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
-            </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <!-- 1a linha -->
-            <div class="card__descricao">
-                <!-- 1a coluna -->
-                <div class="descricao">
-                    <img class="descricao__estrelinhas" src="assets/Estrelinhas.svg" alt="Estrelinhas">
-                    <h3 class="descricao__titulo">Autora do Mês</h3>
-                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é
-                        especialista em Front-End.</p>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/carousel/Javascript.svg"
+                            alt="Livro sobre Javascript assertivo da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Portugol.svg"
+                            alt="Livro sobre Portugol da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Guia Front-end.svg"
+                            alt="Livro Guia Front-End da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Liderança.svg"
+                            alt="Livro sobre liderança em design da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/Acessibilidade.svg"
+                            alt="Livro sobre acessibilidade da Alura Books"></div>
+                    <div class="swiper-slide"><img src="assets/carousel/ApacheKafka.svg"
+                            alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
                 </div>
-                <!-- 2a coluna -->
-                <img class="descricao__imagem" src="assets/Perfil-escritora 1.svg" alt="Escritora Juliana Agarikov">
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
-            <!-- 2a linha -->
-            <div class="card__botoes">
-                <!-- 1a coluna -->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <!-- 2a coluna -->
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+            <div class="card">
+                <!-- 1a linha -->
+                <div class="card__descricao">
+                    <!-- 1a coluna -->
+                    <div class="descricao">
+                        <img class="descricao__estrelinhas" src="assets/Estrelinhas.svg" alt="Estrelinhas">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é
+                            especialista em Front-End.</p>
+                    </div>
+                    <!-- 2a coluna -->
+                    <img class="descricao__imagem" src="assets/Perfil-escritora 1.svg" alt="Escritora Juliana Agarikov">
+                </div>
+
+                <!-- 2a linha -->
+                <div class="card__botoes">
+                    <!-- 1a coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <!-- 2a coluna -->
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -321,11 +336,15 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
-            spaceBetween: 10,
+            spaceBetween: window.screen.availWidth >= 768 ? 50 : 5,
             slidesPerView: 3,
             pagination: {
                 el: '.swiper-pagination',
                 type: 'bullets',
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
             },
         });
     </script>
